style: fix invisible mobile hamburger icon spans by setting display block and incrementing cache-buster version

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1925,6 +1925,7 @@ input:-webkit-autofill:active {
 }
 
 .app-nav-hamburger span {
+    display: block;
     width: 100%;
     height: 2px;
     background-color: #ffffff;
